--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,18 @@ jobs:
     steps:
       # 1. Check out your code
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2. Set up PHP >=7.4
+      # 2. Set up PHP ≥7.4
       - name: Set up PHP
-        uses: shivammathur/setup-php@v2
+        uses: shivammathur/setup-php@v4
         with:
           php-version: '7.4'
           extensions: mbstring, json, xml
 
-      # 3. Cache/composer install (no-dev)
+      # 3. Cache & install Composer (no-dev)
       - name: Cache Composer packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: vendor
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -38,7 +38,6 @@ jobs:
         run: |
           PLUGIN_SLUG=mini-fair
           ZIP_NAME=${PLUGIN_SLUG}.zip
-          # Ensure you’re zipping the plugin root, excluding dev/git files
           zip -r $ZIP_NAME . \
             -x "*.git*" \
             -x ".github/*" \
@@ -48,7 +47,7 @@ jobs:
 
       # 5. Upload the ZIP as an artifact
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: mini-fair-plugin-zip
           path: mini-fair.zip
