--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Create mini-fair.zip
         run: |
-           zip -r mini-fair.zip . -x "*.git*" "*.github*" "build/*" "node_modules/*" "tests/*"
+           -r mini-fair.zip . -x ".git" ".github" "build/" "node_modules/" "tests/*" "mini-fair.zip"
 
       - name: Upload mini-fair.zip as artifact
         uses: actions/upload-artifact@v4
