--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -33,9 +33,10 @@ jobs:
           zip -r mini-fair.zip . \
             -x ".git/*" ".github/*" "build/*" "node_modules/*" "tests/*"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: mini-fair
-          path: mini-fair.zip
-          retention-days: 2
+      - name: Commit ZIP file
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add pdf2p2.zip
+          git commit -m "Update pdf2p2.zip on push to main" || echo "No changes to commit"
+          git push
