--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,28 @@
-jobs:
-  build:
-    runs-on: ubuntu-latest
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
 
-      - name: Install zip
-        run: sudo apt-get update && sudo apt-get install -y zip
+#      - name: Install zip
+ #       run: sudo apt-get update && sudo apt-get install -y zip
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.1'
-          tools: composer
+  #    - name: Set up PHP
+   #     uses: shivammathur/setup-php@v2
+    #    with:
+     #     php-version: '8.1'
+      #    tools: composer
 
-      - name: Install dependencies
-        run: composer install --no-dev --prefer-dist --no-progress --no-interaction
+#      - name: Install dependencies
+#        run: composer install --no-dev --prefer-dist --no-progress --no-interaction
 
-      - name: Create mini-fair.zip
-        run: zip -r mini-fair.zip . -x "*.git*" "*.github*" "build/*" "node_modules/*" "tests/*"
+#      - name: Create mini-fair.zip
+#        run: zip -r mini-fair.zip . -x "*.git*" "*.github*" "build/*" "node_modules/*" "tests/*"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: mini-fair-plugin-zip
-          path: mini-fair.zip
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v4
+ #       with:
+ #         name: mini-fair-plugin-zip
+ #         path: mini-fair.zip
