--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -13,11 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout mini-fair-repo
         uses: actions/checkout@v4
         with:
-          persist-credentials: true
-          fetch-depth: 1
+          repository: fairpm/mini-fair-repo
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: mini-fair-repo
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
