--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -13,34 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout this workflow's repository (to commit back the ZIP)
       - name: Checkout this repo
         uses: actions/checkout@v4
         with:
           persist-credentials: true
           fetch-depth: 1
 
-      # Checkout the external mini-fair-repo into a subfolder
       - name: Checkout mini-fair-repo
         uses: actions/checkout@v4
         with:
           repository: fairpm/mini-fair-repo
           token: ${{ secrets.GITHUB_TOKEN }}
           path: mini-fair-repo
+          fetch-depth: 1
 
-      # Setup PHP for Composer
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
           tools: composer
 
-      # Install dependencies inside the external repo
       - name: Install dependencies
         working-directory: mini-fair-repo
         run: composer install --no-dev --prefer-dist --no-progress --no-interaction
 
-      # Create the ZIP in the root workspace
       - name: Create ZIP file
         working-directory: mini-fair-repo
         run: |
@@ -51,11 +47,7 @@ jobs:
           zip -r "../$ZIP_NAME" . \
             -x ".git/*" \
             -x ".github/*" \
-            -x "build/*" \
-            -x "node_modules/*" \
-            -x "tests/*"
 
-      # Commit the newly created ZIP back to this repo
       - name: Commit ZIP file
         run: |
           git config user.name "github-actions[bot]"
